# lit-reviewer

./: .gitignore  README.md  profile.example.toml  profile.toml  pyproject.toml
deploy/: com.talus.litreview.plist.template
docs/superpowers/plans/: 2026-07-16-lit-review-app.md
docs/superpowers/specs/: 2026-07-16-lit-review-app-design.md
src/litreview/: archive.py  classics.py  cli.py  config.py  llm.py  models.py  pipeline.py  ranking.py  schema.sql  summarize.py
src/litreview/sources/: __init__.py  base.py  biorxiv.py  openalex.py  pubmed.py
src/litreview/web/: app.py
src/litreview/web/templates/: archive.html  base.html  digest.html  status.html
tests/: conftest.py  test_archive.py  test_classics.py  test_cli.py  test_config.py  test_models.py  test_pipeline.py  test_ranking.py  test_smoke_live.py  test_sources_biorxiv.py  test_sources_openalex.py  test_sources_pubmed.py  test_sources_registry.py  test_summarize.py  test_web.py
tests/fixtures/: biorxiv_details.json  europepmc_search.json  openalex_works.json
