[project]
name = "litreview"
version = "0.1.0"
description = "Personal weekly literature review digest"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "anthropic>=0.69",
    "pydantic>=2",
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
litreview = "litreview.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
litreview = ["schema.sql", "web/templates/*.html"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
